--- a/app/src/main/res/layout/item_packet.xml
+++ b/app/src/main/res/layout/item_packet.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -14,5 +14,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/textPacketTime"
         android:text="@string/time"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textPacketStatus"
+        android:text="Cleaning"/>
 
 </LinearLayout>
