--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,23 +12,11 @@
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="Username"
-            android:id="@+id/inputUser"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="Password"
-            android:id="@+id/inputPassword"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
-            android:id="@+id/btnLogin"/>
+            android:text="Google"
+            android:id="@+id/btnGoogle"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
