--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#4EBFFF</color>
+    <color name="colorPrimaryDark">#005090</color>
+    <color name="colorAccent">#3080C5</color>
+    <color name="colorAccentDark">#429799</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black_800">#FF000000</color>
+    <color name="black_400">#4D4D4D</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorBlueAccent">#18A4E0</color>
+    <color name="colorBlueAccentDark">#0079AD</color>
+    <color name="colorGreenMoney">#4DAD06</color>
+
+    <color name="colorBlack">#0F0F0F</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGreyLight">#E6E6E6</color>
+    <color name="colorGrey">#C4C4C4</color>
+    <color name="colorRed">#FF0000</color>
+    <color name="colorYellow">#F4B737</color>
+    <color name="colorBlueList">#EBF7FF</color>
+
+    //STATUS
+    <color name="colorPurple">#4652A4</color>
+    <color name="colorDarkYellow">#EE9523</color>
+    <color name="colorGreenLight">#00E833</color>
+    <color name="colorGreen">#13A24D</color>
+    <color name="colorGreen_300">#00B58B</color>
+    <color name="colorGreen_200">#21CCA4</color>
+    <color name="colorBlue">#0095DD</color>
+    <color name="colorBluePassive">#6BB0EA</color>
+    <color name="colorDarkGrey">#BBBBBB</color>
+    <color name="colorDarkRed">#D50000</color>
+    <color name="colorSoftRed">#E84545</color>
 </resources>
