--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -83,6 +83,7 @@
             android:outlineSpotShadowColor="@color/colorPrimaryDark"
             android:outlineAmbientShadowColor="@color/colorPrimaryDark"
             tools:targetApi="p">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -90,6 +91,7 @@
                 android:paddingHorizontal="15dp"
                 android:paddingVertical="5dp"
                 android:background="@color/colorPrimary">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -191,46 +193,117 @@
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/btnDevices"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    app:cardCornerRadius="12dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginVertical="10dp">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="horizontal"
-                        android:padding="10dp">
-                        <ImageView
+
+                    <GridLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:columnCount="2"
+                        android:rowCount="1"
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginVertical="10dp"
+                        android:layout_gravity="center">
+
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/ic_device"/>
-                        <TextView
+                            android:layout_marginVertical="10dp"
+                            android:layout_marginHorizontal="5dp">
+                            <androidx.cardview.widget.CardView
+                                android:id="@+id/btnSterilize"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                app:cardCornerRadius="12dp"
+                                android:layout_marginHorizontal="10dp">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:orientation="horizontal"
+                                    android:padding="10dp">
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@drawable/ic_device"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Sterilisasi"
+                                        android:fontFamily="@font/mulireg"
+                                        android:textSize="12sp"
+                                        android:paddingHorizontal="6dp"/>
+                                        />
+                                </LinearLayout>
+                            </androidx.cardview.widget.CardView>
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Tepav Device"
-                            android:fontFamily="@font/mulireg"
-                            android:textSize="12sp"
-                            android:paddingHorizontal="6dp"/>
-                        <ImageView
-                            android:layout_width="12dp"
-                            android:layout_height="12dp"
-                            android:src="@drawable/ic_arrow_forward"
-                            android:tint="@color/colorBlack"
-                            />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+                            android:layout_marginBottom="2dp"
+                            android:gravity="center"
+                            android:layout_marginVertical="10dp">
+                            <androidx.cardview.widget.CardView
+                                android:id="@+id/btnDevices"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                app:cardCornerRadius="12dp"
+                                android:layout_marginHorizontal="10dp">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:orientation="horizontal"
+                                    android:padding="10dp">
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:src="@drawable/ic_device"/>
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Tepav Device"
+                                        android:fontFamily="@font/mulireg"
+                                        android:textSize="12sp"
+                                        android:paddingHorizontal="6dp"/>
+                                    <ImageView
+                                        android:layout_width="12dp"
+                                        android:layout_height="12dp"
+                                        android:src="@drawable/ic_arrow_forward"
+                                        android:tint="@color/colorBlack"
+                                        />
+                                </LinearLayout>
+                            </androidx.cardview.widget.CardView>
+                        </LinearLayout>
+
+                    </GridLayout>
+
+
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mode Otomatis"
+            android:textColor="@color/colorBlack"
+            android:layout_marginHorizontal="8dp" />
+
+        <Switch
+            android:layout_gravity="center"
+            android:id="@+id/textMode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
 
 
@@ -439,123 +512,54 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
-
-
     </GridLayout>
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Temp: "/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="00"
-                android:id="@+id/textTemperaturea"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Humidity: "/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="00"
-                android:id="@+id/textHumiditya"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="UV: "/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="00"
-                android:id="@+id/textUVa"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Manual: "/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1"
-                android:id="@+id/textMode"/>
-        </LinearLayout>
-    </LinearLayout>
-
-
-
-
-
-
-
-
-
-
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
-
-        <Button
+        android:orientation="horizontal">
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btnSterilize"
-            android:text="Sterilize"/>
+            android:text="Paket yang kamu terima"
+            android:fontFamily="@font/mulibold"
+            android:textSize="18sp"
+            android:textColor="@color/black_800"/>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:ignore="MissingConstraints">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <TextView
             android:id="@+id/btnAllPacket"
-            android:text="All Packets"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/recycleviewPacket"
-            tools:listitem="@layout/item_packet"/>
+            android:text="lihat semua"
+            android:gravity="end"
+            android:textColor="@color/colorBlue"/>
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="5dp">
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/recycleviewPacket"
+                tools:listitem="@layout/item_packet"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvEmptyPack"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/tidak_ada_paket_hari_ini"
+            android:gravity="center"
+            android:visibility="gone"/>
+    </LinearLayout>
+
 
 </LinearLayout>
