--- a/app/src/main/res/layout/item_device.xml
+++ b/app/src/main/res/layout/item_device.xml
@@ -9,7 +9,7 @@
     >
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/textDeviceName"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -28,9 +28,11 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_device"/>
                 <TextView
+                    android:id="@+id/textDeviceName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/device_name"
+                    android:textColor="@color/black_800"
                     android:fontFamily="@font/mulireg"
                     android:textSize="12sp"
                     android:paddingHorizontal="16dp"/>
