--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -72,7 +72,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp">
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -80,7 +81,7 @@
             app:cardCornerRadius="32dp"
             android:layout_marginVertical="20dp"
             android:layout_marginHorizontal="5dp"
-            app:cardElevation="4dp"
+            app:cardElevation="8dp"
             android:outlineSpotShadowColor="@color/colorPrimaryDark"
             android:outlineAmbientShadowColor="@color/colorPrimaryDark"
             tools:targetApi="p">
