--- a/app/src/main/res/layout/activity_status_packet.xml
+++ b/app/src/main/res/layout/activity_status_packet.xml
@@ -1,77 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.StatusPacketActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:padding="20dp">
+
+    <RelativeLayout
+        android:id="@+id/tbTimeLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="12dp">
+        <ImageView
+            android:id="@+id/btnCloseDetailPacketActivity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_backward"
+            android:tint="@color/colorBlack"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Paket Kamu"
+            android:fontFamily="@font/ubuntu_bold"
+            android:textColor="@color/colorBlack"
+            android:textSize="18sp"
+            android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:ignore="MissingConstraints">
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        android:paddingVertical="20dp">
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Status: "/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textStatusPacket"/>
-        </LinearLayout>
-
+            android:src="@drawable/ic_package"
+            android:layout_gravity="center_horizontal"/>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_margin="20dp">
+            <androidx.cardview.widget.CardView
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                app:cardElevation="12dp"
+                app:cardCornerRadius="20dp"
+                android:layout_marginHorizontal="12dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:outlineSpotShadowColor="@color/colorPrimary"
+                android:outlineAmbientShadowColor="@color/colorPrimary"
+                tools:targetApi="p">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:paddingHorizontal="15dp"
+                    android:paddingVertical="5dp"
+                    android:background="@drawable/bg_button_outline"
+                    android:padding="30dp">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <com.github.vipulasri.timelineview.TimelineView
+                            android:layout_width="wrap_content"
+                            android:layout_height="100dp"
+                            app:markerSize="20dp"
+                            app:lineWidth="2dp"
+                            app:startLineColor="@color/colorAccent"
+                            app:endLineColor="@color/colorAccent"
+                            app:lineStyle="dash"
+                            app:linePadding="5dp"
+                            android:layout_marginTop="8dp"
+                            app:markerInCenter="false"
+                            app:marker="@drawable/ic_marker"/>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:paddingHorizontal="20dp">
+                            <TextView
+                                android:id="@+id/textStatusPacket"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Ready to Pick"
+                                android:fontFamily="@font/mulibold"
+                                android:textColor="@color/black_800"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Date Time"
+                                android:textColor="@color/black_800"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <com.github.vipulasri.timelineview.TimelineView
+                            android:layout_width="wrap_content"
+                            android:layout_height="100dp"
+                            app:markerSize="20dp"
+                            app:lineWidth="2dp"
+                            app:startLineColor="@color/colorAccent"
+                            app:endLineColor="@color/colorAccent"
+                            app:lineStyle="dash"
+                            app:linePadding="5dp"
+                            android:layout_marginTop="8dp"
+                            app:markerInCenter="false"
+                            app:marker="@drawable/ic_marker"/>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:paddingHorizontal="20dp">
+                            <TextView
+                                android:id="@+id/textSterilizedTime"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Sterilized"
+                                android:fontFamily="@font/mulibold"
+                                android:textColor="@color/black_800"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Date Time"
+                                android:textColor="@color/black_800"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <com.github.vipulasri.timelineview.TimelineView
+                            android:layout_width="wrap_content"
+                            android:layout_height="100dp"
+                            app:markerSize="20dp"
+                            app:lineWidth="2dp"
+                            app:startLineColor="@color/colorAccent"
+                            app:endLineColor="@color/colorAccent"
+                            app:lineStyle="dash"
+                            app:linePadding="5dp"
+                            android:layout_marginTop="8dp"
+                            app:markerInCenter="false"
+                            app:marker="@drawable/ic_marker"/>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:paddingHorizontal="20dp">
+                            <TextView
+                                android:id="@+id/textCleanTime"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Cleaning"
+                                android:fontFamily="@font/mulibold"
+                                android:textColor="@color/black_800"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Date Time"
+                                android:textColor="@color/black_800"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <com.github.vipulasri.timelineview.TimelineView
+                            android:layout_width="wrap_content"
+                            android:layout_height="100dp"
+                            app:markerSize="20dp"
+                            app:lineWidth="2dp"
+                            app:startLineColor="@color/colorAccent"
+                            app:endLineColor="@color/colorAccent"
+                            app:lineStyle="dash"
+                            app:linePadding="5dp"
+                            android:layout_marginTop="8dp"
+                            app:markerInCenter="false"
+                            app:marker="@drawable/ic_marker"/>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:paddingHorizontal="20dp">
+                            <TextView
+                                android:id="@+id/textReceiveTime"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Receive"
+                                android:fontFamily="@font/mulibold"
+                                android:textColor="@color/black_800"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Date Time"
+                                android:textColor="@color/black_800"/>
+                        </LinearLayout>
+                    </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Receive: "/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textReceiveTime"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cleaning: "/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textCleanTime"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sterilized: "/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textSterilizedTime"/>
-        </LinearLayout>
-
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</LinearLayout>
