--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -49,7 +49,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvEmptyPack"
+            android:id="@+id/tvEmptyDevice"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/belum_ada_perangkat_yang_terhubung"
