--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,6 +30,7 @@
     <color name="colorPurple">#4652A4</color>
     <color name="colorDarkYellow">#EE9523</color>
     <color name="colorGreenLight">#00E833</color>
+    <color name="colorSoftGreenLight">#51E672</color>
     <color name="colorGreen">#13A24D</color>
     <color name="colorGreen_300">#00B58B</color>
     <color name="colorGreen_200">#21CCA4</color>
