--- a/app/src/main/res/layout/activity_packet.xml
+++ b/app/src/main/res/layout/activity_packet.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:context=".ui.PacketActivity">
 
     <RelativeLayout
@@ -11,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="12dp">
+        android:padding="16dp">
         <ImageView
             android:id="@+id/btnCloseAllPacketActivity"
             android:layout_width="wrap_content"
@@ -28,32 +29,40 @@
             android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_below="@id/tbAllPacket">
-
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <LinearLayout
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="5dp">
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycleviewStatus"
-                android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/item_status"/>
+                android:id="@+id/recycleviewStatus"
+                tools:listitem="@layout/item_packet"/>
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvEmptyPack"
+            android:id="@+id/tvEmptyPackAll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/tidak_ada_paket_hari_ini"
-            android:fontFamily="@font/mulireg"
             android:gravity="center"
+            android:fontFamily="@font/mulireg"
             android:visibility="gone"/>
     </LinearLayout>
 
-</RelativeLayout>
+
+
+
+
+
+
+
+</LinearLayout>
